clang-tools-extra/test/clang-format/diagnostic.cpp
// RUN: clang-format 2>&1 >/dev/null %s |FileCheck %s
// REQUIRES: shell

}
// CHECK: :[[@LINE-1]]:1: error: unexpected '}'
